Fix the global Lua plugin loader with multiple threads

LGI will yield to other threads when calling into C API.
This caused the return values for another thread's function
call to be on the Lua stack which caused an assertion.

This also adds multiple assertions that the thread's
Lua stack does not have any unpopped values.

https://bugzilla.gnome.org/show_bug.cgi?id=741859